Handle fallback content case in FlatTreeTraversal::traverseSiblings()

FlatTreeTraversal::nextSibling()/previousSibling() didn't handle
fallback content (nodes in <slot> where nothing is distributed).

This CL adds fallback content handling and a unit test case.

BUG=683776

Review-Url: https://codereview.chromium.org/2749033006
Cr-Commit-Position: refs/heads/master@{#457399}

Former-commit-id: b1c7a1d78f6c79f18f1686014a81b86abfb38806